Fix: Spacing under title on smaller devices

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -64,7 +64,7 @@ body {
     overflow: hidden;
     position: relative;
     display: inline-block;
-    height: 33vh;
+    max-height: 33vh;
     width: 100%;
 }
 
